--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 FunctionWrappers = "069b7b12-0de2-55c6-9aab-29f3d0a68a2e"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Maybe = "334f122f-1118-46cc-837f-bff747ee6f78"
 Results = "a6f57dee-de39-11ea-01ba-9f0f7c89923c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
